--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
 	</header>
 
 	<nav id="nav">
-		<h4> About Portfolio Contact </h4>
+		<h4> About</h4><h4>Portfolio</h4><h4>Contact</h4>
 	</nav>
 <div class="wrapper">
 	<section id="content">
-		<section id="aboutMe"><h1>About Me</h1>
+		<section id="aboutMe">
+			<header id="aboutHead">
+			<h1>About Me</h1>
+			</header>
 			<a href="https://imgur.com/mP1S1AG"><img src="https://i.imgur.com/mP1S1AG.png" title="Hi, it's me, your new web dev" /></a>
 			<p>
-				Hello. My name is Tyler. I have been using computers since before I could walk. Typing in "CD\A: to get to my precious "Reader Rabbit" on the floppy drive before I could write"
+				Hello. My name is Tyler. I have been using computers since before I could walk. Typing in "CD\A: to get to my precious "Reader Rabbit" on the floppy drive before I could write.
 			</p>
 			<p>
 				I am the very model of a modern Major-General,
