--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	</header>
 
 	<nav id="nav">
-		<h4> About</h4><h4>Portfolio</h4><h4>Contact</h4>
+		<a href="index.html"><h4>About</h4></a>
+		<a href="portfolio.html"><h4>Portfolio </h4>
+		<a href="contact.html"><h4>Contact</h4>
 	</nav>
 <div class="wrapper">
 	<section id="content">
