add paragraphs to body in index.html

--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
-		<nav id="nav">
-		<a href="index.html"><h4>About</h4></a>
-		<a href="portfolio.html"><h4>Portfolio </h4>
-		<a href="contact.html"><h4>Contact</h4>
-	</nav>
+<header id="name"><h1>Tyler Sweeney</h1>
+</header>
+<nav id="nav">
+	<a id="nav1" href="index.html">About </a>
+	<a id="nav1" href="portfolio.html">Portfolio </a>
+	<a id="nav1" href="contact.html">Contact</a>
+</nav>
 </body>
 
 </html>
