--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 	</header>
 
 	<nav id="nav">
-		<a href="index.html"><h4>About</h4></a>
-		<a href="portfolio.html"><h4>Portfolio </h4>
-		<a href="contact.html"><h4>Contact</h4>
+		<a id="nav1" href="index.html">About </a>
+		<a id="nav1" href="portfolio.html">Portfolio </a>
+		<a id="nav1" href="contact.html">Contact</a>
 	</nav>
+
 <div class="wrapper">
 	<section id="content">
 		<section id="aboutMe">
@@ -26,33 +27,17 @@
 			</header>
 			<a href="https://imgur.com/mP1S1AG"><img src="https://i.imgur.com/mP1S1AG.png" title="Hi, it's me, your new web dev" /></a>
 			<p>
-				Hello. My name is Tyler. I have been using computers since before I could walk. Typing in "CD\A: to get to my precious "Reader Rabbit" on the floppy drive before I could write.
+				Hello. My name is Tyler. I have been using computers since before I could walk. Typing in "CD\A: in DOS to load "Reader Rabbit" off of the floppy drive on my dad's beast of a laptop.
+			</p>
+			<img id="rabbit" src="images/r-rabbit.gif">
+			<p>
+				My Grandfather started a company that made exercise machines. This was in the 80's so personal fitness equipment sales were at their height, as they had found success with a stairclimber. My grandfather employed a few in house programmers. I would often go to work with my dad and get set up with all the "Commander Keen" I could play. 
 			</p>
 			<p>
-				I am the very model of a modern Major-General,
-				I've information vegetable, animal, and mineral,
-				I know the kings of England, and I quote the fights historical
-				From Marathon to Waterloo, in order categorical;a
-				I'm very well acquainted, too, with matters mathematical,
-				I understand equations, both the simple and quadratical,
-				About binomial theorem I'm teeming with a lot o' news, (bothered for a rhyme)
-				With many cheerful facts about the square of the hypotenuse.
+				I rememeber getting our first home PC. I rememeber my dad being excited about the Intel 486 processor, and how it smoked the 386. Looking it up now, 50MHz seems laughable. But I still feel like we were able to get so much done with so little!
 			</p>
 			<p>
-				I'm very good at integral and differential calculus;
-				I know the scientific names of beings animalculous:
-				In short, in matters vegetable, animal, and mineral,
-				I am the very model of a modern Major-General.
-			</p>
-			<p>
-				I know our mythic history, King Arthur's and Sir Caradoc's;
-				I answer hard acrostics, I've a pretty taste for paradox,
-				I quote in elegiacs all the crimes of Heliogabalus,
-				In conics I can floor peculiarities parabolous;
-				I can tell undoubted Raphaels from Gerard Dows and Zoffanies,
-				I know the croaking chorus from The Frogs of Aristophanes!
-				Then I can hum a fugue of which I've heard the music's din afore, (bothered for a rhyme)b
-				And whistle all the airs from that infernal nonsense Pinafore.
+				So from that point on in the early 90's I always had a hand in helping upgrade computer parts. Until eventually my interest surpassed my dads and now I was the one begging for new parts and components. By High School I'd collected enough to make my own frankenstein PC.
 			</p>
 			<p>
 				Then I can write a washing bill in Babylonic cuneiform,
