--- a/portfolio.html
+++ b/portfolio.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
 	</head>
 <body>
+	<header id="name"><h1>Tyler Sweeney</h1>
+	</header>
+<nav id="nav">
+	<a id="nav1" href="index.html">About </a>
+	<a id="nav1" href="portfolio.html">Portfolio </a>
+	<a id="nav1" href="contact.html">Contact</a>
+</nav>
+<div class="wrapper">
+	<section id="content">
 
-		<nav id="nav">
-		<a href="index.html"><h4>About</h4></a>
-		<a href="portfolio.html"><h4>Portfolio </h4>
-		<a href="contact.html"><h4>Contact</h4>
-	</nav>
-	
-	<section>
-		Bender's Blackjack
+		<section id="bender">
+			Bender's Blackjack
+		</section>
+
+		<section>
+			King Gizzard Fan Page
+		</section>
+
+		<section>
+			Mouse Hunt game
+		</section>
+
+		<section>
+			RPG Game
+		</section>
+
+		<section>
+			Videos
+		</section>
+
 	</section>
-
-	<section>
-		King Gizzard Fan Page
-	</section>
-
-	<section>
-		Mouse Hunt game
-	</section>
-
-	<section>
-		RPG Game
-	</section>
-
-	<section>
-		Videos
-	</section>
-
+</div
 </body>
 </html>
