make major changes to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,14 +12,16 @@
 	<a id="nav1" href="contact.html">Contact</a>
 </nav>
 <div class="wrapper">
-	<section id="content">
+	<section class="thumbs">
 
 		<section id="bender">
-			Bender's Blackjack
+			<div id="benderBanner">Bender's Blackjack</div>
+			<img id="benderThumb" src="images/benderBlackjack.png">
 		</section>
 
-		<section>
-			King Gizzard Fan Page
+		<section id="kingGizz">
+			<div id="kingGizzBanner">Band Fan Page</div>
+			<img id="kingGizzThumb" src="images/kingGizz.png">
 		</section>
 
 		<section>
@@ -35,6 +37,6 @@
 		</section>
 
 	</section>
-</div
+</div>
 </body>
 </html>
