--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
-
-<div id="fixed">
-	&lt;div&gt;<br>
-	position:fixed
-</div>
 	<header id="name"><h1>Tyler Sweeney</h1>
 	</header>
 
@@ -23,9 +18,11 @@
 	<section id="content">
 		<section id="aboutMe">
 			<header id="aboutHead">
-			<h1>About Me</h1>
+			About Me
 			</header>
+			<br>
 			<a href="https://imgur.com/mP1S1AG"><img src="https://i.imgur.com/mP1S1AG.png" title="Hi, it's me, your new web dev" /></a>
+			<br>
 			<p>
 				Hello. My name is Tyler. I have been using computers since before I could walk. Typing in "CD\A: in DOS to load "Reader Rabbit" off of the floppy drive on my dad's beast of a laptop.
 			</p>
@@ -40,35 +37,46 @@
 				So from that point on in the early 90's I always had a hand in helping upgrade computer parts. Until eventually my interest surpassed my dads and now I was the one begging for new parts and components. By High School I'd collected enough to make my own frankenstein PC.
 			</p>
 			<p>
-				Then I can write a washing bill in Babylonic cuneiform,
-				And tell you ev'ry detail of Caractacus's uniform:c
-				In short, in matters vegetable, animal, and mineral,
-				I am the very model of a modern Major-General.
+				Currently I have a gaming pc that I built from scratch. I also have a pc that I built inside of a milk crate. I have a drum machine that needs software to run, so I had to build something separate from the PC that I record on, which is another PC that I built.
 			</p>
 			<p>
-				In fact, when I know what is meant by "mamelon" and "ravelin",
-				When I can tell at sight a Mauser rifle from a javelin,d
-				When such affairs as sorties and surprises I'm more wary at,
-				And when I know precisely what is meant by "commissariat",
-				When I have learnt what progress has been made in modern gunnery,
-				When I know more of tactics than a novice in a nunnery –
-				In short, when I've a smattering of elemental strategy – (bothered for a rhyme)
-				You'll say a better Major-General has never sat a gee.e
+				I am in the process of completing a full stack web development program at UCI.
+				I have also taken a circuit board building course at Saddleback College. Additionally, I took Python and Java courses at Orange Coast Community College.
 			</p>
+			Languages I am experienced with:
+			</p>
+			<ul>
+				<ls>Java</ls>
+				<ls>Python</ls>
+				<ls>HTML5</ls>
+				<ls>CSS3</ls>
+				<ls>Git</ls>
+			</ul>
+			<p>Adobe Software I am experienced with</p>
+			<ul>
+				<ls>Photoshop</ls>
+				<ls>Illustrator</ls>
+				<ls>Premiere</ls>
+				<ls>After Effects</ls>
+			</ul>
 		</section>
 	</section>
 </div>
 	
 	
 
-	<aside>
-	</aside>
+<aside>
+	<h2>Connect with Me</h2>
+</aside>
 
 	<section>
 	</section>
 
 	<p>
 	</p>
+	<footer>
+		<h4>&copy; Copyright 2017 Tyler Sweeney</h4>
+	</footer>
 </body>
 
 
