maybe too many changes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 			<a href="https://imgur.com/mP1S1AG"><img src="https://i.imgur.com/mP1S1AG.png" title="Hi, it's me, your new web dev" /></a>
 			<br>
 			<p>
-				Hello. My name is Tyler. I have been using computers since before I could walk. Typing in "CD\A: in DOS to load "Reader Rabbit" off of the floppy drive on my dad's beast of a laptop.
+				Hello. My name is Tyler. I have been using computers for as long as I can remember. I have fond memories of typing "CD\A:" in DOS to load "Reader Rabbit" off of the floppy drive on my dad's beast of a laptop.
 			</p>
 			<img id="rabbit" src="images/r-rabbit.gif">
+			<img id="laptop" src="images/laptop.jpg">
 			<p>
 				My Grandfather started a company that made exercise machines. This was in the 80's so personal fitness equipment sales were at their height, as they had found success with a stairclimber. My grandfather employed a few in house programmers. I would often go to work with my dad and get set up with all the "Commander Keen" I could play. 
 			</p>
@@ -60,23 +61,29 @@
 				<ls>After Effects</ls>
 			</ul>
 		</section>
-	</section>
+
+
+	
+		
+	</section>	
+	<aside>
+		<p>Connect with Me</p>
+		</aside>
 </div>
 	
 	
 
-<aside>
-	<h2>Connect with Me</h2>
-</aside>
 
-	<section>
-	</section>
+
+	
 
 	<p>
 	</p>
 	<footer>
 		<h4>&copy; Copyright 2017 Tyler Sweeney</h4>
 	</footer>
+
+	
 </body>
 
 
