--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
 	<a id="nav1" href="contact.html">Contact</a>
 </nav>
 <div class="wrapper">
+	<section id="content">
 	<section class="thumbs">
 
 		<section id="bender">
@@ -24,8 +25,9 @@
 			<img id="kingGizzThumb" src="images/kingGizz.png">
 		</section>
 
-		<section>
-			Mouse Hunt game
+		<section id="mouse">
+			<div id="mouseBanner">Mouse Hunt game</div>
+			<img id="mouseThumb" src="images/catNMouse.png">
 		</section>
 
 		<section>
@@ -37,6 +39,7 @@
 		</section>
 
 	</section>
+</section>
 </div>
 </body>
 </html>
