add contact content. change portHead style.

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,33 +13,35 @@
 </nav>
 <div class="wrapper">
 	<section id="content">
-	<section class="thumbs">
+		<header id="portHead">Portfolio</header>
+		<section id="portfolio">
 
-		<section id="bender">
-			<div id="benderBanner">Bender's Blackjack</div>
-			<img id="benderThumb" src="images/benderBlackjack.png">
+			<section class="thumbs">
+
+				<section id="bender">
+					<div id="benderBanner">Bender's Blackjack</div>
+					<img id="benderThumb" src="images/benderBlackjack.png">
+				</section>
+
+				<section id="kingGizz">
+					<div id="kingGizzBanner">Band Fan Page</div>
+					<img id="kingGizzThumb" src="images/kingGizz.png">
+				</section>
+
+				<section id="mouse">
+					<div id="mouseBanner">Mouse Hunt game</div>
+					<img id="mouseThumb" src="images/catNMouse.png">
+				</section>
+				<section>
+					RPG Game
+				</section>
+
+				<section>
+					Videos
+				</section>
+			</section>
 		</section>
-
-		<section id="kingGizz">
-			<div id="kingGizzBanner">Band Fan Page</div>
-			<img id="kingGizzThumb" src="images/kingGizz.png">
-		</section>
-
-		<section id="mouse">
-			<div id="mouseBanner">Mouse Hunt game</div>
-			<img id="mouseThumb" src="images/catNMouse.png">
-		</section>
-
-		<section>
-			RPG Game
-		</section>
-
-		<section>
-			Videos
-		</section>
-
 	</section>
-</section>
 </div>
 </body>
 </html>
