--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 			</ul>
 		</section>
 
-
-	
-			<aside>
+	<aside id="connect">
 			<p>Connect with Me</p>
-		</aside>	
+		</aside>
+	
+		
 	</section>	
-
+	
 </div>
 	
 	
