change portfolio thumb file names

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,17 +20,17 @@
 
 				<section id="bender">
 					<div id="benderBanner">Bender's Blackjack</div>
-					<img id="benderThumb" src="images/benderBlackjack.png">
+					<img id="benderThumb" src="images/benderBlackjack.PNG">
 				</section>
 
 				<section id="kingGizz">
 					<div id="kingGizzBanner">Band Fan Page</div>
-					<img id="kingGizzThumb" src="images/kingGizz.png">
+					<img id="kingGizzThumb" src="images/kingGizz.PNG">
 				</section>
 
 				<section id="mouse">
 					<div id="mouseBanner">Mouse Hunt game</div>
-					<img id="mouseThumb" src="images/catNMouse.png">
+					<img id="mouseThumb" src="images/catNMouse.PNG">
 				</section>
 				<section>
 					RPG Game
